feat(backend,common,client): cooldown support wip
